<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relative_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.MainActivity">

    <FrameLayout
            android:id="@+id/container_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/nav_view_main"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_nav_menu_allenatore"/>

</RelativeLayout>