<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".view.fragments.SchedeFragment"
             android:id="@+id/fragment_schede">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/schede_recycler_view">
        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:fabCustomSize="50dp"
                android:id="@+id/button_add_scheda"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/spacing_xlarge"
                android:src="@drawable/ic_add_white24dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>