...

            <Button
                    android:text="@string/three_dots_vertical"
                    android:background="@null"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/threeDots_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="@dimen/spacing_medium"/>

            <Button
                    android:background="@drawable/ic_tick_24px"
...
                    android:maxWidth="150dp"
                    android:maxLines="2"
                    android:visibility="visible"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nome_editText"
                    app:layout_constraintStart_toEndOf="@id/profile_imageView"
                    app:layout_constraintTop_toTopOf="@+id/profile_imageView"
                    android:hint="@string/nome"
                    android:layout_margin="@dimen/spacing_large"
                    android:maxWidth="150dp"
                    android:maxLines="1"
...


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.cardview.widget.CardView
                android:id="@+id/profilo_allenatore_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_large"
                app:cardCornerRadius="@dimen/text_small"
                app:cardUseCompatPadding="true"
                app:cardElevation="4dp"
...

                <Button
                        android:text="@string/three_dots_vertical"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@null"
                        android:id="@+id/threeDots_allenatore_button"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="@dimen/spacing_small"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>



        <LinearLayout
                android:id="@+id/profilo_selez_allen_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/spacing_large"
                android:visibility="gone">

...

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:fabCustomSize="40dp"
                    android:layout_gravity="center"
                    android:id="@+id/button_add_allenatore"
                    android:layout_margin="@dimen/spacing_medium"
                    android:src="@drawable/ic_add_white24dp"/>

        </LinearLayout>



        <androidx.cardview.widget.CardView
                android:id="@+id/profilo_scheda_attuale_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/text_small"
                app:cardUseCompatPadding="true"
                app:cardElevation="4dp"
                android:layout_margin="@dimen/spacing_large">
...

                <Button
                        android:text="@string/three_dots_vertical"
                        android:background="@null"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/threeDots_scheda_button"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="@dimen/spacing_small"/>


                <TextView
...

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
                android:id="@+id/profilo_selez_scheda_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/spacing_large"
                android:visibility="gone">

...

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:fabCustomSize="40dp"
                    android:layout_gravity="center"
                    android:id="@+id/button_add_scheda_attuale"
                    android:layout_margin="@dimen/spacing_medium"
                    android:src="@drawable/ic_add_white24dp"/>

        </LinearLayout>

    </LinearLayout>


    <Button
            android:id="@+id/diventa_allenatore_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/diventa_allenatore"
            android:textColor="@color/white"
            android:layout_gravity="bottom"/>
...
