<resources>
    <string name="app_name">MyFitness</string>
    <string name="app_subtitle">Allenarsi non è mai stato così facile</string>
    <string name="start">INIZIA</string>
    <string name="register">Registrati</string>
    <string name="completa_registrazione">Completa registrazione</string>
    <string name="login">Accedi</string>
    <string name="ok">Ok</string>
    <string name="richiedi_scheda">Richiedi scheda</string>
    <string name="crea_scheda">Crea scheda</string>
    <string name="cerca">Cerca</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="already_have_account">Hai già un account? Accedi</string>
    <string name="dont_have_account">Non hai un account? Registrati</string>
    <string name="mail">mail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_richieste">Richieste</string>
    <string name="title_profile">Profilo</string>
    <string name="title_schede">Schede</string>
    <string name="title_notifications">Notifications</string>
    <string name="test_skip">skip</string>
    <string name="three_dots_vertical">&#8942;</string>
    <string name="nome_allenatore">Nome allenatore</string>
    <string name="nome_palestra">Nome palestra</string>
    <string name="giorni">Giorni</string>
    <string name="elimina">Elimina</string>
    <string name="crea">Crea</string>
    <string name="logout">Logout</string>
    <string name="visualizza">Visualizza</string>
    <string name="seleziona">Seleziona</string>
    <string name="immagine_profilo">Immagine profilo</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="sesso">Sesso</string>
    <string name="descrizione">Descrizione</string>
    <string name="eta">Età</string>
    <string name="il_tuo_allenatore">Il tuo allenatore</string>
    <string name="la_tua_scheda">La tua scheda</string>
    <string name="ness_allenatore_slez">Non hai ancora selezionato un allenatore. Selezionane uno.</string>
    <string name="ness_scheda_slez">Non hai ancora selezionato la tua scheda attuale. Selezionane una.</string>
    <string name="serie">Serie</string>
    <string name="ripetizioni">Ripetizioni</string>
    <string name="recupero">Recupero</string>
    <string name="commento">Commento</string>
    <string name="modifica">Modifica</string>
    <string name="richiedi">Richiedi</string>
    <string name="annulla">Annulla</string>
    <string name="in_attesa">In attesa</string>
    <string name="completate">Completate</string>
    <string name="scheda_corrente">Seleziona come scheda corrente</string>
    <string name="aggiungi_commento">Aggiungi commento</string>
    <string name="guarda_video">Guarda video</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="prosegui">Prosegui</string>
    <string name="maschio">Maschio</string>
    <string name="femmina">Femmina</string>
    <string name="diventa_allenatore">DIVENTA ALLENATORE</string>
    <string name="torna_utente">TORNA UTENTE SEMPLICE</string>
    <string name="tipologia">Tipologia</string>
    <string name="data">Data</string>
    <string name="apri">APRI</string>
    <string name="invia">INVIA</string>
    <string name="scheda">Scheda</string>
    <string name="esercizi">Esercizi</string>
    <string name="autore">Autore</string>
    <string name="forza">Forza</string>
    <string name="massa">Massa</string>
    <string name="definizione">Definizione</string>
    <string name="non_specificare">Non specificare</string>
    <string name="fine">Fine</string>
    <string name="aggiungi_modifica_commento">Aggiungi/modifica commento</string>
    <string name="invia_scheda">Invia scheda</string>
    <string name="cambia_lingua">Cambia lingua</string>
    <string name="vuoi_divent_allenatore">Vuoi diventare allenatore?</string>
    <string name="conf_divent_allenatore">Diventanto allenatore potrai utilizzare tutte le funzionalità
        di un utente semplice; in più, potrai ricevere richieste di schede da altri utenti.</string>
    <string name="vuoi_tornare_utente">Vuoi tornare utente semplice?</string>
    <string name="conf_tornare_utente">Tornando utente semplice non riceverai più richieste di schede da altri utenti.</string>
    <string name="scegli_allenatore">Scegli un allenatore</string>
    <string name="le_tue_schede">Le tue schede</string>


    <!-- ImageView TAG ID (per mettere l'uri con tag nella imageView -->
    <string name="image_tag_id">imageViewTagId</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
