<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.fragments.AllenatoriFragment"
             android:id="@+id/fragment_allenatori">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/allenatori_recycler_view">
    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>